# dazhi

./: .gitignore  pyproject.toml
src/dazhi/agents/: audio_mcp_agent.py
src/dazhi/codec/: __init__.py  audio.py  config.py  players.py  recorders.py  utils.py
src/dazhi/handlers/: __init__.py  base.py  default_event.py  event_dict.py  gradio.py  voice_mcp.py
src/dazhi/inferencers/llm/: inferencer.py  session.py
src/dazhi/inferencers/mcp/: inferencer.py
src/dazhi/inferencers/realtime/: audio_util.py  config.py  inferencer.py
src/dazhi/mcp_adaptors/: config.py  mcp_client.py
src/dazhi/message/: history_item.py  manager.py
src/dazhi/ui/: chatbot.py  ui.py
tests/: test01.py
tests/test_mcp/: test01.py  test_mcp_inferencer.py
tests/test_openai/: demo_tools.py  simple_realtime_app.py  test_mcp.py  test_realtime.py  test_tools_call.py
tests/test_ui/: test_chat_interface.py  test_chatbot.py  test_stream_audio.py  test_stream_chatbot.py  test_stream_chatbot2.py  test_ui_inferencer.py  test_ui_tools.py
