[project]
name = "dazhi"
version = "0.1.0"
description = ""
authors = [
    {name = "migo",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "openai[realtime] (>=2.15.0,<3.0.0)",
    "numpy (<2.3)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "gradio (>=6.3.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "mcp (>=1.25.0,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dazhi", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
